--- a/server/web/index.html
+++ b/server/web/index.html
@@ -5,13 +5,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 <title>TinyAppsDev</title>
-<link rel="stylesheet" type="text/css" href="lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/TinyListView.css">
-<link rel="stylesheet" type="text/css" href="css/index.css?0">
+<link rel="stylesheet" type="text/css" href="/web/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="/web/css/TinyListView.css">
+<link rel="stylesheet" type="text/css" href="/web/css/index.css?0">
 
-<script src="lib/jquery-3.1.1.min.js"></script>
-<script src="lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-<script src="index.js"></script>
+<script src="/web/lib/jquery-3.1.1.min.js"></script>
+<script src="/web/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="/web/index.js"></script>
 
 </head>
 <body>
