--- a/server/web/index.html
+++ b/server/web/index.html
@@ -7,11 +7,11 @@
 <title>TinyAppsDev</title>
 <link rel="stylesheet" type="text/css" href="/web/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/web/css/TinyListView.css">
-<link rel="stylesheet" type="text/css" href="/web/css/index.css?0">
+<link rel="stylesheet" type="text/css" href="/web/css/index.css?1">
 
 <script src="/web/lib/jquery-3.1.1.min.js"></script>
 <script src="/web/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-<script src="/web/index.js"></script>
+<script src="/web/index.js?1"></script>
 
 </head>
 <body>
